test(DestinationServiceTest): add passed tests